# adventOfCode

./: .gitignore  LICENSE  README.md
AOC2020/day1/: task1_1.py  task1_2.py
AOC2020/day10/: task10_2.py
AOC2020/day11/: task11_1.py  task11_2.py
AOC2020/day14/: 14.in  task14_2.py
AOC2020/day3/: task3_1.py
AOC2020/day4/: task4_1.py
AOC2020/day5/: task5_2.py
AOC2020/day7/: task7_1.py
AOC2020/day8/: task8_1.py
AOC2020/day9/: task9_1.py  task9_2.py
AOC2021/: CMakeLists.txt
AOC2021/day1/: solution.cc
AOC2021/day10/: solution.cc
AOC2021/day11/: solution.cc
AOC2021/day12/: solution.cc
AOC2021/day13/: solution.cc
AOC2021/day14/: solution.cc
AOC2021/day15/: solution.cc
AOC2021/day16/: solution.cc
AOC2021/day17/: solution.cc
AOC2021/day18/: input.in  solution.cc
AOC2021/day19/: solution.cc
AOC2021/day2/: solution.cc
AOC2021/day21/: solution.cc
AOC2021/day22/: solution.cc
AOC2021/day23/: solution.cc
AOC2021/day24/: solution.cc
AOC2021/day3/: solution.cc
AOC2021/day4/: solution.cc
AOC2021/day5/: solution.cc
AOC2021/day6/: solution.cc
AOC2021/day7/: solution.cc
AOC2021/day8/: solution.cc
AOC2021/day9/: solution.cc
AOC2021/includes/: utils.h
AOC2022/: README.md  adventOfCode.cabal  python_oneliners.py
AOC2022/input/: day11.in
AOC2022/src/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day2.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  Main.hs  Solutions.hs  Utils.hs
AOC2023/: Cargo.toml  README.md
AOC2023/src/: argparse.rs  day.rs  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day_template.tmp  lib.rs  main.rs  solutions.rs  utils.rs
AOC2024/: .formatter.exs  README.md  mix.exs
AOC2024/lib/: aoc.ex  day01.ex  day02.ex  day03.ex  day04.ex  day05.ex  day06.ex  day07.ex  day08.ex  day09.ex  day10.ex  day11.ex  day12.ex  day13.ex  day14.ex  utils.ex
AOC2024/lib/mix/tasks/: prepare.ex  solve.ex
AOC2024/test/: day01_test.exs  day02_test.exs  day03_test.exs  day04_test.exs  day05_test.exs  day06_test.exs  day07_test.exs  day08_test.exs  day09_test.exs  day10_test.exs  day11_test.exs  day12_test.exs  day13_test.exs  day14_test.exs
AOC2025/: README.md  eslint.config.mjs  jest.config.js  package-lock.json  package.json  tsconfig.json
AOC2025/src/: day01.ts  day02.ts  day03.ts  day04.ts  day05.ts  day06.ts  day07.ts  day08.ts  day09.ts  day10.ts  day11.ts  day12.ts  index.ts  prepare.ts  utils.ts
AOC2025/test/: day01.test.ts  day02.test.ts  day03.test.ts  day04.test.ts  day05.test.ts  day06.test.ts  day07.test.ts  day08.test.ts  day09.test.ts  day10.test.ts  day11.test.ts  day12.test.ts
day10/: task10_1.py
day12/: task12_1.py  task12_2.py
day13/: task13_1.py  task13_2.py
day14/: task14_1.py
day2/: task2_1.py  task2_2.py
day3/: task3_2.py
day4/: task4_2.py
day5/: task5_1.py
day6/: task6_1.py  task6_2.py
day7/: task7_2.py
day8/: task8_2.py
