cmake_minimum_required(VERSION 3.19)
project(AOC2021)

set(CMAKE_CXX_STANDARD 20)

add_executable(day1 day1/solution.cc)
add_executable(day2 day2/solution.cc)
add_executable(day3 day3/solution.cc)
add_executable(day4 day4/solution.cc)
add_executable(day5 day5/solution.cc)
add_executable(day6 day6/solution.cc)
add_executable(day7 day7/solution.cc)
add_executable(day8 day8/solution.cc)
add_executable(day9 day9/solution.cc)
add_executable(day10 day10/solution.cc)