cabal-version:      2.4
name:               adventOfCode
version:            0.1.0.0
synopsis:           Advent of Code 2022 - Haskell Solutions

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             smichniak
maintainer:         NONE

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable adventOfCode
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Solutions,
                      Utils,
                      Day1,
                      Day2,
                      Day3,
                      Day4,
                      Day5,
                      Day6,
                      Day7,
                      Day8,
                      Day9,
                      Day10,
                      Day11,
                      Day12,
                      Day13,
                      Day14,
                      Day15,
                      Day16

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    
    build-depends:    split, array, containers, parsec, mtl, matrix

    build-depends:    base ^>=4.16.3.0
    hs-source-dirs:   src
    default-language: Haskell2010
