[package]
name = "aoc2023"
version = "0.1.0"
authors = ["Szymon Michniak"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pico-args = "0.5.0"
regex = "1.10.2"
chrono = "0.4.31"
indoc = "2.0.4"
nom = "7.1.3"
itertools = "0.12.0"
onig = { version = "6.4.0", default-features = false }
num = "0.4.1"
rand = "0.8.5"
multiset = "0.0.5"